--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -13,9 +13,9 @@
     <div id="setupGroup" class="lightBoxWall" >
         @@include('./htmlTemplate/setupGroup.html')
     </div>
-    <div id="partinGroup" class="lightBoxWall" >
+    <!-- <div id="partinGroup" class="lightBoxWall" >
         @@include('./htmlTemplate/partinGroups.html')
-    </div>
+    </div> -->
 
 
 </body>
@@ -27,13 +27,13 @@
     function closeNewGroup(){
         setupGroup.style.display = "none";
     };
-    let partinGroup = document.getElementById("partinGroup");
-    function openpartinGroup(){
-        partinGroup.style.display = "block";
-    };
-    function closepartinGroup(){
-        partinGroup.style.display = "none";
-    };
+    // let partinGroup = document.getElementById("partinGroup");
+    // function openpartinGroup(){
+    //     partinGroup.style.display = "block";
+    // };
+    // function closepartinGroup(){
+    //     partinGroup.style.display = "none";
+    // };
 
 </script>
 
