--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -1,52 +1,9 @@
-<div class="containerGroupAll">
-    <div class="containerGroup">
-        <div class="coverPhoto"><img src="" style="width: 100%;
-                    max-height:450px;"></div>
-        <a href="#"><img src="./images/openGroup.png" id="btnOpen"></a>
-        <div id="myModal" class="modal">
-            <div id="openGroup" class="openGroup">
-                <div class="groupTitle">開啟揪團</div>
-                <form>
-                    <table>
-                        <label>選擇一個行程:</label>
-                            <select>
-                                <option>台北行</option>
-                                <option>九份2日遊</option>
-                            </select>
-                        <br>
-                        <label>還沒有行程:</label>
-                        <a href="#">排行程</a>
-                        <br>
-                        <label>請選擇一張美麗的封面照片:</label>
-                        <input type="file"></input>
-                        <br>
-                        <div class="coverImg"><img src=""></div>
-            </div>
-            <br>
-            <label>設定參團條件</label>
-            <tr>
-                <td><label>報名期限:</label><select></select></td>
-                <td><label>性別期限:</label><select></select></td>
-            </tr>
-            <tr>
-                <td><label>出發日期:</label><select></select></td>
-                <td><label>年紀限制:</label><select></select></td>
-            </tr>
-            <tr>
-                <td><label>人數上限:</label><select></select></td>
-                <td><label>預估費用:</label><select></select></td>
-            </tr>
-            <tr>
-                <td><label>人數下限:</label><select></select></td>
-            </tr>
-            </table>
-            <div class="btnForm">
-                <button>發布</button>
-                <button>儲存</button>
-                <button id="btnClose">取消</button>
-            </div>
-            </form>
-        </div>
+<div style="width:1000px;height:500px;"></div>
+<div class="container">
+    <div class="openNewGroup col-4 col-l-2 col-md-2 col-lg-2">
+        <a  onclick="openNewGroup();">
+            <img src="./images/openNewGroup.png"  class="d-md-block" />
+        </a>
     </div>
     <div class="tabAll">
         <div class="tab">
