--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -165,7 +165,8 @@
             <div class="groupViewPCcardBlock d-md-flex d-none">
                 <!-- 揪團卡片 -->
                 <div class="card cardOriginalTem cardGroup"  >
-                    <a  onclick="openpartinGroup();">
+                    <!-- <a  onclick="openpartinGroup();"> -->
+                        <a href="./groupInside.html">
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
