--- a/dev/groupInside.html
+++ b/dev/groupInside.html
@@ -6,6 +6,17 @@
     @@include('./htmlTemplate/nav.html') 
     @@include('./htmlTemplate/groupShow.html') 
     @@include('./htmlTemplate/footer.html')
+    <div id="setupGroup" class="lightBoxWall" >
+        @@include('./htmlTemplate/setupGroup.html')
+    </div>
 </body>
-
+<script>
+    let setupGroup = document.getElementById("setupGroup");
+    function openNewGroup(){
+        setupGroup.style.display = "block";
+    };
+    function closeNewGroup(){
+        setupGroup.style.display = "none";
+    };
+</script>
 </html>
