--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -145,7 +145,7 @@
                         <input v-model="toBeSavedSchedule.scheName" type="text" class="w-100 border-top-0 border-left-0 border-right-0 form-control font-weight-bold text-truncate" placeholder="請輸入行程名稱" required="required">
                           <i role="button" @click="saveSchedule" class="my-auto far fa-save mx-2 text-black-50 " style="cursor:pointer;"></i><i class="my-auto fas fa-trash-alt mx-2 text-black-50 "></i>
                           </div>
-                        <attraction-direction @ghi="removeSelectedAttraction" class="border" v-for="selectedAttraction in selectedAttractions" v-bind:label2="selectedAttraction">
+                        <attraction-direction @ghi="removeSelectedAttraction" @sendAttracStartTimeToAttractionList="sendAttracStartTimeToBackend" class="border" v-for="selectedAttraction in selectedAttractions" v-bind:label2="selectedAttraction">
                         </attraction-direction>
                       </div>
                       <div class="border col-lg-8 px-0" style="height:400px">
@@ -170,6 +170,7 @@
               scheName: "",
               scheStatus: "",
               selectedAttractions: [],
+              attracStartTime: [],
             },
           };
         },
@@ -248,6 +249,14 @@
               });
             }
           },
+          sendAttracStartTimeToBackend(x, y) {
+            let n = this.selectedAttractions.indexOf(x);
+            // for (let i = 0; i < this.selectedAttractions.length; i++) {
+            //   this.selectedAttractions[i].attracStartTime = "";
+            // }
+            this.selectedAttractions[n].attracStartTime = y;
+            console.log(this.selectedAttractions);
+          },
         },
         mounted() {
           this.map = new google.maps.Map(document.getElementById("map"), {
@@ -274,6 +283,11 @@
       });
 
       Vue.component("attraction-direction", {
+        data() {
+          return {
+            attracStartTime: "",
+          };
+        },
         props: ["label2"],
         template: `
               <div class="container my-3 py-3 pr-0 rounded shadow">
@@ -286,8 +300,8 @@
                   </div>
                   <div class="right col-8 border pr-0 pl-1 position-relative">
                     <h6 class="border">{{label2.Name}}</h6>
-                    <div class="border position-absolute" style="bottom:0px;right:0px;cursor:pointer;" >
-                      <label class=" my-0" style="font-size:0.7rem;">抵達：</label><input type="time" class=" border-0" style="font-size:0.7rem;cursor:pointer;">
+                    <div class="border position-absolute" style="bottom:0px;cursor:pointer;" >
+                      <label class=" my-0" style="font-size:0.7rem;">抵達：</label><input type="time" v-model="attracStartTime" @change="sendAttracStartTimeToAttractionList" class=" border-0" style="font-size:0.7rem;cursor:pointer;">
                     </div>
                   </div>
                 </div>
@@ -296,6 +310,14 @@
         methods: {
           sendClosedAttractionToAttractionList() {
             this.$emit("ghi", this.label2);
+          },
+          sendAttracStartTimeToAttractionList() {
+            this.$emit(
+              "sendAttracStartTimeToAttractionList",
+              this.label2,
+              this.attracStartTime
+            );
+            // alert(`${this.attracStartTime}`);
           },
         },
       });
