--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -268,10 +268,15 @@
 
       Vue.component("attraction-item", {
         template: `
-              <card class="card align-top m-2 p-2 d-inline-block shadow-sm" style="width: 12rem;height:14rem;">
-                      <img :src='this.label.Picture1' class="card-img-top"/>
-                      <h6 class="card-title text-truncate">{{label.Name}}</h6>
-                      <button @click="sendSelectedAttractionToAttractionList" type="button" class="btn btn-outline-success btn-block w-50">加入行程</button>
+              <card class="card align-top m-2 p-2 d-inline-block shadow-sm" style="width: 10rem;height:14rem;">
+                <div class="border position-relative cardImg overflow-hidden" style="height:10rem">
+                  <img :src='this.label.Picture1' class="d-block h-100 mx-auto"/>
+                  <div class="border position-absolute bg-dark w-100 px-1" style="bottom:0px;opacity:0.6">
+                    <h6 class=" text-light text-truncate mb-0">{{label.Name}}</h6>
+                    <p class=" text-light text-truncate mb-1" style="font-size:0.7rem">{{label.Region}}</p>
+                  </div>
+                </div>
+                      <button @click="sendSelectedAttractionToAttractionList" type="button" class="btn btn-outline-success btn-block w-50">+加入行程</button>
               </card>
                       `,
         props: ["label"],
