carousel 976 below done(ajax connect)

--- a/dev/htmlTemplate/slider.html
+++ b/dev/htmlTemplate/slider.html
@@ -74,40 +74,56 @@
     <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
-    <div class="bb carousel-item active" style="height: 500px;">
-      <img src="./images/a-lin_back.jpg" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>阿里山五日遊</h5>
-        <p>搭公車賞螢趣 新北市螢光祕境、平溪線鐵道探幽、深坑老街美食一日遊 觀光客首選行程</p>
-      </div>
+    <div id="GroupCarousel_deskF" name="GroupCarousel_deskF" class="bb carousel-item active" style="height: 500px;">
+      <a href="">
+        <div v-for="GroupCarousel_F in GroupCarousel_Fs">
+          <img :src="GroupCarousel_Fs.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>{{GroupCarousel_Fs.Group_title}}</h5>
+            <p>{{GroupCarousel_Fs.GroupDays}}天</p>
+          </div>
+        </div>
+      </a>
     </div>
-    <div class="carousel-item" style="height: 500px;">
-      <img src="./images/alin.jpg" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
+
+    <div id="GroupCarousel_deskG" name="GroupCarousel_deskG" class="carousel-item" style="height: 500px;">
+      <a href="">
+        <img :src="GroupCarousel_Gs.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{GroupCarousel_Gs.Group_title}}</h5>
+          <p>{{GroupCarousel_Gs.GroupDays}}天</p>
+        </div>
+      </a>
     </div>
-    <div class="carousel-item" style="height: 500px;">
-      <img src="./images/blind3.jpg" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-      </div>
+
+    <div id="GroupCarousel_deskH" name="GroupCarousel_deskH" class="carousel-item" style="height: 500px;">
+      <a href="">
+        <img :src="GroupCarousel_Hs.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{GroupCarousel_Hs.Group_title}}</h5>
+          <p>{{GroupCarousel_Hs.GroupDays}}天</p>
+        </div>
+      </a>
     </div>
-    <div class="carousel-item" style="height: 500px;">
-      <img src="./images/eric.jpg" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
+
+    <div id="GroupCarousel_deskI" name="GroupCarousel_deskI" class="carousel-item" style="height: 500px;">
+      <a href="">
+        <img :src="GroupCarousel_Is.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{GroupCarousel_Is.Group_title}}</h5>
+          <p>{{GroupCarousel_Is.GroupDays}}天</p>
+        </div>
+      </a>
     </div>
-    <div class="carousel-item" style="height: 500px;">
-      <img src="./images/iu2b.jpg" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
+
+    <div id="GroupCarousel_deskJ" name="GroupCarousel_deskJ" class="carousel-item" style="height: 500px;">
+      <a href="">
+        <img :src="GroupCarousel_Js.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{GroupCarousel_Js.Group_title}}</h5>
+          <p>{{GroupCarousel_Js.GroupDays}}天</p>
+        </div>
+      </a>
     </div>
   </div>
 
@@ -156,6 +172,7 @@
   $(document).ready(function () {
     let imgCount = $('.carousel1>div').length;
     //依照div數量產生長方形
+    //更動為依照div下一層的div數量產生方塊（避免多層影響）
     for (let i = 0; i < imgCount; i++) {
       $('.boxes').append(`<div class="box${i}"></div>`);
     }
