--- a/dev/member.html
+++ b/dev/member.html
@@ -9,7 +9,7 @@
     <div id="spotLightBox" class="lightBoxWall">
       @@include('./htmlTemplate/SpotLightBox.html')
     </div>
-    <div id="scheLightBox" class="lightBoxWall">
+    <div id="scheLightBox" class="lightBoxWall" style="display: block;">
       @@include('./htmlTemplate/ScheLightBox.html')
     </div>
   </body>
