--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -140,11 +140,13 @@
         // input-->emit 'abc'-->@abc-->addAttraction-->:label-->props
         template: `
                 <div>
+                  <attrac-modal :label4="attracModal"></attrac-modal>
 
                   <attraction-input @abc="getSearchedAttractionsFromPHP"></attraction-input>
 
                   <cards class="d-block" style="height:16.5rem;overflow-x:scroll;white-space: nowrap;background-color:rgba(0,0,0,0.04);">
-                    <attraction-item @def="addSelectedAttractionsToDirection" v-for="searchedAttraction in searchedAttractions" v-bind:label="searchedAttraction"></attraction-item>
+                    <attraction-item 
+                    @def="addSelectedAttractionsToDirection" @def2="addSelectedAttractionsToModal" v-for="searchedAttraction in searchedAttractions" v-bind:label="searchedAttraction"></attraction-item>
                   </cards>
 
                   <div class="container">
@@ -181,6 +183,7 @@
               selectedAttractions: [],
               attracStartTime: [],
             },
+            attracModal: {},
           };
         },
         methods: {
@@ -260,11 +263,12 @@
           },
           sendAttracStartTimeToBackend(x, y) {
             let n = this.selectedAttractions.indexOf(x);
-            // for (let i = 0; i < this.selectedAttractions.length; i++) {
-            //   this.selectedAttractions[i].attracStartTime = "";
-            // }
             this.selectedAttractions[n].attracStartTime = y;
             console.log(this.selectedAttractions);
+          },
+          addSelectedAttractionsToModal(x) {
+            this.attracModal = x;
+            console.log(this.attracModal);
           },
         },
         mounted() {
@@ -277,7 +281,7 @@
 
       Vue.component("attraction-item", {
         template: `
-              <card class="card align-top m-2 p-2 d-inline-block shadow-sm" style="width: 11rem;height:14rem;">
+              <card @click="sendSelectedAttractionToAttractionList2" class="card align-top m-2 p-2 d-inline-block shadow-sm" data-toggle="modal" data-target="#attracModal" style="width: 11rem;height:14rem;cursor:pointer;">
                 <div class="border position-relative cardImg overflow-hidden" style="height:11.5rem">
                   <h5 class="position-absolute text-light" style="top:0px;left:0px;">景點</h5>
                   <img :src='this.label.Picture1' class="d-block h-100 mx-auto"/>
@@ -288,7 +292,7 @@
                 </div>
                 <div class="container py-0">
                   <div class="row justify-content-between">
-                    <p @click="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:0.8rem;cursor:pointer;">+ 加入行程</p>
+                    <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:0.8rem;cursor:pointer;">+ 加入行程</p>
                     <i class="p-1 pt-2 m-0 far fa-heart" style="color:#bc2654; font-size:0.8rem;cursor:pointer;"></i>
                   </div>
                 </div>
@@ -298,6 +302,9 @@
         methods: {
           sendSelectedAttractionToAttractionList() {
             this.$emit("def", this.label);
+          },
+          sendSelectedAttractionToAttractionList2() {
+            this.$emit("def2", this.label);
           },
         },
       });
@@ -342,6 +349,30 @@
         },
       });
 
+      Vue.component("attrac-modal", {
+        props: ["label4"],
+        template: `
+        <div class="modal fade" id="attracModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{label4.Name}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        `,
+      });
       //Reference///////////////////////////////////////////////////////////////////////////////////////
       // Vue.component("attraction-schedule", {
       //   template: `
