revise mainGroup form

--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -196,7 +196,7 @@
                     </a>
                 </div>
                 <!-- 揪團卡片 -->
-                <div class="card cardOriginalTem cardGroup " style="">
+                <div class="card cardOriginalTem cardGroup ">
                     <a >
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay cardImgOverlayWebUse">
