--- a/dev/htmlTemplate/setupGroup.html
+++ b/dev/htmlTemplate/setupGroup.html
@@ -22,10 +22,13 @@
             <div class="selectreq">設定參團條件</div>
             <div class="selectreqst">
                 <div class="reqpartend">報名期限：
-                    <input id="date" type="date" style="width: 125px;height: 20px">
+                    <input id="date" type="date" style="width: 125px;height: 20px; font-size:14px;">
                 </div>
                 <div class="reqpartdep">出發日期：
-                    <input id="date" type="date" style="width: 125px;height: 20px">
+                    <input id="date" type="date" style="width: 125px;height: 20px; font-size:14px;">
+                </div>
+                <div class="reqpartdep">結束日期：
+                    <input id="date" type="date" style="width: 125px;height: 20px; font-size:14px;">
                 </div>
                 <div class="reqpartlimit">人數上限：
                     <input type="text" id="partlimit" name="partlimit" style="height: 20px; width: 125px">
@@ -33,7 +36,7 @@
             </div>
             <div class="selectreq2">
                 <div class="genderlimit">性別限制：
-                    <select name="gendercho" style="width: 125px;height: 20px" class="gendselect">
+                    <select name="gendercho" style="font-size:14px; width: 125px;height: 20px" class="gendselect">
                         <option value="female" class="gendf"selected>女</option>
                         <option value="male" class="gendm">男</option>
                         <option value="none" class="gendnone">不限</option>
