setupGroup column revise

--- a/dev/groupInside.html
+++ b/dev/groupInside.html
@@ -6,7 +6,7 @@
     @@include('./htmlTemplate/nav.html') 
     @@include('./htmlTemplate/groupShow.html') 
     @@include('./htmlTemplate/footer.html')
-    <div id="setupGroup" class="lightBoxWall" >
+    <div id="setupGroup" class="lightBoxWall" style="overflow-y: scroll;">
         @@include('./htmlTemplate/setupGroup.html')
     </div>
 </body>
