--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -366,20 +366,39 @@
                   <img :src="this.label4.Picture1" class="d-block h-100 mx-auto">
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">{{label4.Add}}</li>
-                  <li class="list-group-item">{{label4.Tel}}</li>
-                  <li class="list-group-item">{{label4.Opentime}}</li>
-                  <li class="list-group-item">{{label4.Description}}</li>
+                  <li class="list-group-item px-1" style="font-size:0.9rem">
+                    <h6>地址：</h6>
+                    {{label4.Add}}
+                    </li>
+                  <li class="list-group-item px-1" style="font-size:0.9rem">
+                    <h6>電話：</h6>
+                    {{label4.Tel}}
+                    </li>
+                  <li class="list-group-item px-1" style="font-size:0.9rem">
+                    <h6>開放時間：</h6>
+                    {{label4.Opentime}}
+                  </li>
+                  <li class="list-group-item px-1" style="font-size:0.9rem">
+                    <h6>景點描述：</h6>
+                    {{label4.Description}}
+                    </li>
                 </ul>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="container py-0">
+                  <div class="row justify-content-between">
+                    <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:1rem;cursor:pointer;">+ 加入行程</p>
+                    <i class="p-1 pt-2 m-0 far fa-heart" style="color:#bc2654; font-size:1rem;cursor:pointer;"></i>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
         `,
+        methods: {
+          sendSelectedAttractionToAttractionList() {},
+        },
       });
       //Reference///////////////////////////////////////////////////////////////////////////////////////
       // Vue.component("attraction-schedule", {
