--- a/dev/htmlTemplate/slider.html
+++ b/dev/htmlTemplate/slider.html
@@ -77,9 +77,9 @@
     <div id="GroupCarousel_deskF" name="GroupCarousel_deskF" class="carousel-item active" style="height: 500px;">
 
       <img :src="GroupCarousel_Fs.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>{{GroupCarousel_Fs.Group_title}}</h5>
-        <p>{{GroupCarousel_Fs.GroupDays}}天</p>
+      <div class="carousel-caption d-none d-md-block carouselmask">
+        <h5 class="phoneCarouselWordTitle">{{GroupCarousel_Fs.Group_title}}</h5>
+        <p class="phoneCarouselWord">{{GroupCarousel_Fs.GroupDays}}天</p>
       </div>
 
     </div>
@@ -87,39 +87,39 @@
     <div id="GroupCarousel_deskG" name="GroupCarousel_deskG" class="carousel-item" style="height: 500px;">
 
       <img :src="GroupCarousel_Gs.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>{{GroupCarousel_Gs.Group_title}}</h5>
-        <p>{{GroupCarousel_Gs.GroupDays}}天</p>
+      <div class="carousel-caption d-none d-md-block carouselmask">
+        <h5 class="phoneCarouselWordTitle">{{GroupCarousel_Gs.Group_title}}</h5>
+        <p class="phoneCarouselWord">{{GroupCarousel_Gs.GroupDays}}天</p>
       </div>
 
     </div>
 
-    <div id="GroupCarousel_deskH" name="GroupCarousel_deskH" class="carousel-item" style="height: 500px;">
+    <div id="GroupCarousel_deskH" name="GroupCarousel_deskH" class="carousel-item " style="height: 500px;">
 
       <img :src="GroupCarousel_Hs.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>{{GroupCarousel_Hs.Group_title}}</h5>
-        <p>{{GroupCarousel_Hs.GroupDays}}天</p>
+      <div class="carousel-caption d-none d-md-block carouselmask">
+        <h5 class="phoneCarouselWordTitle">{{GroupCarousel_Hs.Group_title}}</h5>
+        <p class="phoneCarouselWord">{{GroupCarousel_Hs.GroupDays}}天</p>
       </div>
 
     </div>
 
-    <div id="GroupCarousel_deskI" name="GroupCarousel_deskI" class="carousel-item" style="height: 500px;">
+    <div id="GroupCarousel_deskI" name="GroupCarousel_deskI" class="carousel-item " style="height: 500px;">
 
       <img :src="GroupCarousel_Is.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>{{GroupCarousel_Is.Group_title}}</h5>
-        <p>{{GroupCarousel_Is.GroupDays}}天</p>
+      <div class="carousel-caption d-none d-md-block carouselmask">
+        <h5 class="phoneCarouselWordTitle">{{GroupCarousel_Is.Group_title}}</h5>
+        <p class="phoneCarouselWord">{{GroupCarousel_Is.GroupDays}}天</p>
       </div>
 
     </div>
 
-    <div id="GroupCarousel_deskJ" name="GroupCarousel_deskJ" class="carousel-item" style="height: 500px;">
+    <div id="GroupCarousel_deskJ" name="GroupCarousel_deskJ" class="carousel-item " style="height: 500px;">
 
       <img :src="GroupCarousel_Js.Group_pic" class="d-block w-100 h-100" alt="..." style="object-fit: cover;">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>{{GroupCarousel_Js.Group_title}}</h5>
-        <p>{{GroupCarousel_Js.GroupDays}}天</p>
+      <div class="carousel-caption d-none d-md-block carouselmask">
+        <h5 class="phoneCarouselWordTitle">{{GroupCarousel_Js.Group_title}}</h5>
+        <p class="phoneCarouselWord">{{GroupCarousel_Js.GroupDays}}天</p>
       </div>
 
     </div>
