--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -173,7 +173,8 @@
                         <p>團主：{{group.Mem_name}}</p>
                         <div>
                             <p>團主評價：
-                                <img src="./images/good.png">{{group.Mem_name}}
+                                <img src="./images/good.png">
+                                {{group.hostlike}}
                             </p>
                         </div>
                         <p>出團日期：{{group.Group_StartDate}}</p>
