--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -111,16 +111,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 
     <script>
-      // <input class="border border-secondary w-100 my-2 rounded-pill" id="attractionInput" v-model="queryAttractionName" @keydown.enter='sendInputToAttractionList' placeholder="搜尋景點名稱">
       Vue.component("attraction-input", {
         template: `
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" v-model="queryAttractionName" @keydown.enter='sendInputToAttractionList' placeholder="搜尋景點名稱">
-          <div class="input-group-append">
-            <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
-          </div>
-        </div>
-                    `,
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" v-model="queryAttractionName" @keydown.enter='sendInputToAttractionList' placeholder="搜尋景點名稱">
+                <div class="input-group-append">
+                  <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
+                </div>
+              </div>
+                          `,
         data() {
           return {
             queryAttractionName: "",
@@ -135,41 +134,39 @@
       });
 
       Vue.component("attraction-list", {
-        //父元素接收abc事件之後，呼叫getAttractionsFromPHP函式
-        //父元素bind一個變數label，再把label往子組件傳
-        // input-->emit 'abc'-->@abc-->addAttraction-->:label-->props
         template: `
-                <div>
-                  <attrac-modal @jkl="addSelectedAttractionsToDirection" :label4="attracModal"></attrac-modal>
+                      <div>
+                        <attrac-modal @jkl="addSelectedAttractionsToDirection" :label4="attracModal"></attrac-modal>
 
-                  <attraction-input @abc="getSearchedAttractionsFromPHP"></attraction-input>
+                        <attraction-input @abc="getSearchedAttractionsFromPHP"></attraction-input>
 
-                  <cards class="d-block" style="height:16.5rem;overflow-x:scroll;white-space: nowrap;background-color:rgba(0,0,0,0.04);">
-                    <attraction-item 
-                    @def="addSelectedAttractionsToDirection" @def2="addSelectedAttractionsToModal" v-for="searchedAttraction in searchedAttractions" v-bind:label="searchedAttraction"></attraction-item>
-                  </cards>
+                        <cards class="d-block" style="height:16.5rem; overflow-x:scroll;white-space: nowrap;background-color:rgba(0,0,0,0.04);">
+                          <attraction-item
+                          @def="addSelectedAttractionsToDirection" @def2="addSelectedAttractionsToModal" @def3="saveKeepAttrap" v-for="searchedAttraction in searchedAttractions" v-bind:label="searchedAttraction"></attraction-item>
+                        </cards>
 
-                  <div class="container">
-                    <div class="row">
-                      <div class="border px-1 col-lg-4">
-                        <div class="d-flex">
-                        <input v-model="toBeSavedSchedule.scheName" type="text" class="w-100 border-top-0 border-left-0 border-right-0 form-control font-weight-bold text-truncate text-center" placeholder="請輸入行程名稱" required="required">
-                          <i role="button" @click="saveSchedule" class="my-auto far fa-save mx-2 text-black-50 " style="cursor:pointer;"></i><i class="my-auto fas fa-trash-alt mx-2 text-black-50 "></i>
+                        <div class="container">
+                          <div class="row">
+                            <div class="border px-1 col-lg-4">
+                              <div class="d-flex">
+                              <input v-model="toBeSavedSchedule.scheName" type="text" class="w-100 border-top-0 border-left-0 border-right-0 form-control font-weight-bold text-truncate text-center" placeholder="請輸入行程名稱" required="required">
+                                <i role="button" @click="saveSchedule" class="my-auto far fa-save mx-2 text-black-50 " style="cursor:pointer;"></i><i class="my-auto fas fa-trash-alt mx-2 text-black-50 "></i>
+                                </div>
+                              <attraction-direction @ghi="removeSelectedAttraction" @sendAttracStartTimeToAttractionList="sendAttracStartTimeToBackend" class="border" v-for="selectedAttraction in selectedAttractions" v-bind:label2="selectedAttraction">
+                              </attraction-direction>
+                            </div>
+                            <div class="border col-lg-8 px-0" style="height:400px">
+                              <div id="map" class="h-100"></div>
+                            </div>
                           </div>
-                        <attraction-direction @ghi="removeSelectedAttraction" @sendAttracStartTimeToAttractionList="sendAttracStartTimeToBackend" class="border" v-for="selectedAttraction in selectedAttractions" v-bind:label2="selectedAttraction">
-                        </attraction-direction>
+                        </div>
                       </div>
-                      <div class="border col-lg-8 px-0" style="height:400px">
-                        <div id="map" class="embed-responsive embed-responsive-16by9"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                        `,
+                              `,
         data() {
           return {
             searchedAttractions: [],
             selectedAttractions: [],
+            MemNO: "",
             map: null,
             mapCenter: {
               lat: 25.0374865,
@@ -210,11 +207,11 @@
 
             // add infowindow:
             let contentString = `
-                              <div>
-                                <h6 class="card-title text-truncate">${x.Name}</h6>
-                                <p>${x.Region}</p>
-                              </div>
-                              `;
+                                    <div>
+                                      <h6 class="card-title text-truncate">${x.Name}</h6>
+                                      <p>${x.Region}</p>
+                                    </div>
+                                    `;
             let infowindow = new google.maps.InfoWindow({
               content: contentString,
             });
@@ -264,11 +261,31 @@
           sendAttracStartTimeToBackend(x, y) {
             let n = this.selectedAttractions.indexOf(x);
             this.selectedAttractions[n].attracStartTime = y;
-            console.log(this.selectedAttractions);
+            // console.log(this.selectedAttractions);
           },
           addSelectedAttractionsToModal(x) {
             this.attracModal = x;
-            console.log(this.attracModal);
+            // console.log(this.attracModal);
+          },
+          saveKeepAttrap(x) {
+            // check if logged, if true, get and input MemNO:
+            if (true) {
+              this.MemNO = 1;
+            }
+            // if keep is not existed then save it, if keep is existed then alert :
+            // check if keep is existed:
+            let n = this.searchedAttractions.indexOf(x);
+            $.get(
+              `saveKeepAttrac.php?KeepMemNO=${this.MemNO}&KeepAttracNO=${this.searchedAttractions[n].Id}`
+            ).then((data) => {
+              console.log(JSON.parse(data));
+            });
+            // $.ajax({
+            //   method: "GET",
+            //   url: "distanceMatrix2.php",
+            //   data: {this.MemNO:"45"},
+            //   dataType: "json",
+            // });
           },
         },
         mounted() {
@@ -281,23 +298,23 @@
 
       Vue.component("attraction-item", {
         template: `
-              <card @click="sendSelectedAttractionToAttractionList2" class="card align-top m-2 p-2 d-inline-block shadow-sm" data-toggle="modal" data-target="#attracModal" style="width: 11rem;height:14rem;cursor:pointer;">
-                <div class="border position-relative cardImg overflow-hidden" style="height:11.5rem">
-                  <h5 class="position-absolute text-light" style="top:0px;left:0px;">景點</h5>
-                  <img :src='this.label.Picture1' class="d-block h-100 mx-auto"/>
-                  <div class="position-absolute w-100 px-1" style="bottom:0px;background-color:rgba(0,0,0,0.4);">
-                    <h6 class=" text-light text-truncate mb-0 mt-1" style="font-size:0.9rem;">{{label.Name}}</h6>
-                    <p class=" text-light text-truncate mb-1" style="font-size:0.7rem">{{label.Region}}</p>
-                  </div>
-                </div>
-                <div class="container py-0">
-                  <div class="row justify-content-between">
-                    <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:0.8rem;cursor:pointer;">+ 加入行程</p>
-                    <i class="p-1 pt-2 m-0 far fa-heart" style="color:#bc2654; font-size:0.8rem;cursor:pointer;"></i>
-                  </div>
-                </div>
-              </card>
-                      `,
+                    <card @click="sendSelectedAttractionToAttractionList2" class="card align-top m-2 p-2 d-inline-block shadow-sm" data-toggle="modal" data-target="#attracModal" style="width: 11rem;height:14rem;cursor:pointer;">
+                      <div class="border position-relative cardImg overflow-hidden" style="height:11.5rem">
+                        <h5 class="position-absolute text-light" style="top:0px;left:0px;">景點</h5>
+                        <img :src='this.label.Picture1' class="d-block h-100 mx-auto"/>
+                        <div class="position-absolute w-100 px-1" style="bottom:0px;background-color:rgba(0,0,0,0.4);">
+                          <h6 class=" text-light text-truncate mb-0 mt-1" style="font-size:0.9rem;">{{label.Name}}</h6>
+                          <p class=" text-light text-truncate mb-1" style="font-size:0.7rem">{{label.Region}}</p>
+                        </div>
+                      </div>
+                      <div class="container py-0">
+                        <div class="row justify-content-between">
+                          <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:0.8rem;cursor:pointer;">+ 加入行程</p>
+                          <i @click.stop="sendSelectedAttractionToAttractionList3" class="p-1 pt-2 m-0 far fa-heart" style="color:#bc2654; font-size:0.8rem;cursor:pointer;"></i>
+                        </div>
+                      </div>
+                    </card>
+                            `,
         props: ["label"],
         methods: {
           sendSelectedAttractionToAttractionList() {
@@ -305,6 +322,9 @@
           },
           sendSelectedAttractionToAttractionList2() {
             this.$emit("def2", this.label);
+          },
+          sendSelectedAttractionToAttractionList3() {
+            this.$emit("def3", this.label);
           },
         },
       });
@@ -317,23 +337,23 @@
         },
         props: ["label2"],
         template: `
-              <div class="container my-3 py-3 pr-0 rounded shadow">
-                <button @click="sendClosedAttractionToAttractionList" type="button" class="close border"   aria-label="Close" style="margin-top:-17px;">
-                  <span aria-hidden="true" style="font-size:1rem">&times;</span>
-                </button>
-                <div class="row">
-                  <div class="left px-0 overflow-hidden col-4 border" style="height:100px">
-                    <img :src="this.label2.Picture1" class="d-block h-100 mx-auto">
-                  </div>
-                  <div class="right col-8 border pr-0 pl-1 position-relative">
-                    <h6 class="border">{{label2.Name}}</h6>
-                    <div class="border position-absolute" style="bottom:0px;cursor:pointer;" >
-                      <label class=" my-0" style="font-size:0.7rem;">抵達：</label><input type="time" v-model="attracStartTime" @change="sendAttracStartTimeToAttractionList" class=" border-0" style="font-size:0.7rem;cursor:pointer;">
+                    <div class="container my-3 py-3 pr-0 rounded shadow">
+                      <button @click="sendClosedAttractionToAttractionList" type="button" class="close border"   aria-label="Close" style="margin-top:-17px;">
+                        <span aria-hidden="true" style="font-size:1rem">&times;</span>
+                      </button>
+                      <div class="row">
+                        <div class="left px-0 overflow-hidden col-4 border" style="height:100px">
+                          <img :src="this.label2.Picture1" class="d-block h-100 mx-auto">
+                        </div>
+                        <div class="right col-8 border pr-0 pl-1 position-relative">
+                          <h6 class="border">{{label2.Name}}</h6>
+                          <div class="border position-absolute" style="bottom:0px;cursor:pointer;" >
+                            <label class=" my-0" style="font-size:0.7rem;">抵達：</label><input type="time" v-model="attracStartTime" @change="sendAttracStartTimeToAttractionList" class=" border-0" style="font-size:0.7rem;cursor:pointer;">
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                </div>
-              </div>
-              `,
+                    `,
         methods: {
           sendClosedAttractionToAttractionList() {
             this.$emit("ghi", this.label2);
@@ -352,50 +372,50 @@
       Vue.component("attrac-modal", {
         props: ["label4"],
         template: `
-        <div class="modal fade" id="attracModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-scrollable">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">{{label4.Name}}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <div class="border w-100 overflow-hidden" style="height:20rem">
-                  <img :src="this.label4.Picture1" class="d-block h-100 mx-auto">
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item px-1" style="font-size:0.9rem">
-                    <h6>地址：</h6>
-                    {{label4.Add}}
-                    </li>
-                  <li class="list-group-item px-1" style="font-size:0.9rem">
-                    <h6>電話：</h6>
-                    {{label4.Tel}}
-                    </li>
-                  <li class="list-group-item px-1" style="font-size:0.9rem">
-                    <h6>開放時間：</h6>
-                    {{label4.Opentime}}
-                  </li>
-                  <li class="list-group-item px-1" style="font-size:0.9rem">
-                    <h6>景點描述：</h6>
-                    {{label4.Description}}
-                    </li>
-                </ul>
-              </div>
-              <div class="modal-footer">
-                <div class="container py-0">
-                  <div class="row justify-content-between">
-                    <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:1rem;cursor:pointer;">+ 加入行程</p>
-                    <i class="p-1 pt-2 m-0 far fa-heart" style="color:#bc2654; font-size:1rem;cursor:pointer;"></i>
+              <div class="modal fade" id="attracModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">{{label4.Name}}</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="border w-100 overflow-hidden" style="height:20rem">
+                        <img :src="this.label4.Picture1" class="d-block h-100 mx-auto">
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item px-1" style="font-size:0.9rem">
+                          <h6>地址：</h6>
+                          {{label4.Add}}
+                          </li>
+                        <li class="list-group-item px-1" style="font-size:0.9rem">
+                          <h6>電話：</h6>
+                          {{label4.Tel}}
+                          </li>
+                        <li class="list-group-item px-1" style="font-size:0.9rem">
+                          <h6>開放時間：</h6>
+                          {{label4.Opentime}}
+                        </li>
+                        <li class="list-group-item px-1" style="font-size:0.9rem">
+                          <h6>景點描述：</h6>
+                          {{label4.Description}}
+                          </li>
+                      </ul>
+                    </div>
+                    <div class="modal-footer">
+                      <div class="container py-0">
+                        <div class="row justify-content-between">
+                          <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:1rem;cursor:pointer;">+ 加入行程</p>
+                          <i class="p-1 pt-2 m-0 far fa-heart" style="color:#bc2654; font-size:1rem;cursor:pointer;"></i>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        `,
+              `,
         methods: {
           sendSelectedAttractionToAttractionList() {
             this.$emit("jkl", this.label4);
