--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -9,6 +9,12 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 </script>
 
+<style>
+    .nav-linkgroupView::after{
+      width: 100% !important;
+    }
+</style>
+
 <body>
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/slider.html')
