--- a/dev/blogView.html
+++ b/dev/blogView.html
@@ -2,6 +2,12 @@
 <html lang="en">
 @@include('./htmlTemplate/head.html')
 
+<style>
+    .nav-linkblogView::after{
+      width: 100% !important;
+    }
+</style>
+
 <body>
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/slider.html')
