--- a/dev/member.html
+++ b/dev/member.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   @@include('./htmlTemplate/head.html')
+
+  <style>
+    .nav-linkMember::after{
+      width: 100% !important;
+    }
+  </style>
  
   <body>
     @@include('./htmlTemplate/nav.html')
