--- a/dev/plan.html
+++ b/dev/plan.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('./htmlTemplate/head.html')
+<style>
+    .nav-linkplan::after{
+      width: 100% !important;
+    }
+</style>
 <body>
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/mainPlan.html')
